--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,11 +12,10 @@
       max-height: 526px;
       width: 100%;
       margin: 0 auto;
-      .start__content {
+      .startContent {
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        height: 100%;
         .startTextCard {
           background-color: var(--color-black-opacity);
           backdrop-filter: blur(10px);
@@ -85,15 +84,141 @@
           }
         }
         .firstSlider {
-
+          width: 100%;
+          max-height: 698px;
+          height: 36.35vw;
+          padding: 40px 0 40px 0;
+          .sliderWrapper {
+            gap: 1.38vw;
+            .firstSliderCard {
+              display: flex;
+              justify-content: center;
+              height: 100%;
+              .firstGalleryImage {
+                position: relative;
+                img {
+                  max-width: 100%;
+                  max-height: 100%;
+                }
+                .galleryTextBlock {
+                  background-color: var(--color-black-mixin);
+                  color: var(--color-white);
+                  border: 1px var(--color-white) solid;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  flex-direction: column;
+                  text-align: center;
+                  position: absolute;
+                  max-height: 114px;
+                  height: 5.94vw;
+                  bottom: -20px;
+                  left: 50%;
+                  transform: translateX(-50%);
+                  h3 {
+                    font-weight: normal;
+                    font-size: 1.45vw;
+                  }
+                  p {
+                    font-weight: 100;
+                    font-size: 0.83vw;
+                    margin-top: 0.52vw;
+                  }
+                }
+              }
+            }
+            .firstSliderCard:nth-of-type(1) {
+              max-width: 575px;
+              width: 29.94vw;
+              .firstGalleryImage {
+                .galleryTextBlock {
+                  max-width: 535px;
+                  width: 27.86vw;
+                }
+              }
+            }
+            .firstSliderCard:nth-of-type(2) {
+              max-width: 339px;
+              width: 17.65vw;
+              .firstGalleryImage {
+                .galleryTextBlock {
+                  max-width: 299px;
+                  width: 15.57vw;
+                }
+              }
+            }
+            .firstSliderCard:nth-of-type(3) {
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+              max-width: 454px;
+              width: 23.64vw;
+              .firstGalleryImage {
+                .galleryTextBlock {
+                  max-width: 415px;
+                  width: 21.61vw;
+                }
+              }
+            }
+          }
+          .swiper-button-next, .swiper-button-prev {
+            display: none;
+          }
         }
       }
     }
     .second {
-
+      max-height: 606px;
+      height: 31.56vw;
+      .secondContent {
+        background-image: url("../images/secondbackground.jpg");
+        background-position: center right;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        .secondTextCard {
+          background-color: var(--color-white);
+          max-width: 708px;
+          max-height: 402px;
+          width: 36.87vw;
+          height: 20.93vw;
+          padding: 2.6vw 1.87vw 2.7vw 2.23vw;
+          .secondTextCard__textBlock {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            max-width: 610px;
+            max-height: 300px;
+            width: 100%;
+            height: 100%;
+            h1 {
+              font-weight: 700;
+              font-size: 2.4vw;
+            }
+            p {
+              line-height: 1.5;
+              font-weight: 100;
+              font-size: 1.04vw;
+            }
+            a {
+              background-color: var(--color-black-mixin);
+              color: var(--color-white);
+              &:hover {
+                background-color: var(--color-grey);
+                color: var(--color-white);
+              }
+            }
+          }
+        }
+      }
     }
     .third {
+      max-height: 706px;
+      height: 36.77vw;
+      .thirdContent {
 
+      }
     }
     .fourth {
 
