--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,17 @@
     display: flex;
     justify-content: center;
   }
+  [class*="__textBlock"]{
+    h1 {
+      font-weight: 700;
+      font-size: 2.4vw;
+    }
+    p {
+      line-height: 1.5;
+      font-weight: 100;
+      font-size: 1.04vw;
+    }
+  }
   main {
     display: flex;
     flex-direction: column;
@@ -64,15 +75,6 @@
             max-width: 637px;
             width: 100%;
             height: 100%;
-            h1 {
-              font-weight: 700;
-              font-size: 2.4vw;
-            }
-            p {
-              line-height: 1.5;
-              font-weight: 100;
-              font-size: 1.04vw;
-            }
           }
         }
       }
@@ -188,15 +190,6 @@
             max-height: 300px;
             width: 100%;
             height: 100%;
-            h1 {
-              font-weight: 700;
-              font-size: 2.4vw;
-            }
-            p {
-              line-height: 1.5;
-              font-weight: 100;
-              font-size: 1.04vw;
-            }
           }
         }
       }
@@ -217,7 +210,7 @@
           .thirdTextBlock, .thirdSlider, .thirdButton {
             width: 100%;
           }
-          .thirdTextBlock {
+          .thirdContent__textBlock {
             display: flex;
             align-items: flex-start;
             justify-content: space-between;
@@ -225,25 +218,22 @@
             flex-direction: column;
             max-height: 259px;
             height: 13.48vw;
-            h1 {
-              font-size: 2.4vw;
-            }
-            p {
-              font-weight: 100;
-              font-size: 1.04vw;
-            }
           }
           .thirdSlider {
             max-height: 325px;
+            max-width: 903px;
+            width: 47.03vw;
             height: 16.92vw;
+            margin: 0;
             .thirdSliderWrapper {
               display: flex;
               align-items: center;
               justify-content: space-between;
-              max-width: 903px;
-              width: 47.03vw;
               height: 100%;
+              min-width: 0;
               .thirdSliderSlide {
+                max-width: 257px;
+                width: 13.38vw;
                 height: 100%;
                 img {
                   max-height: 100%;
@@ -262,8 +252,17 @@
           .playerWrapper {
             background-image: url("../images/playerPreview.jpg");
             position: relative;
+            cursor: pointer;
             width: 100%;
             height: 100%;
+            #hoverLayer {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background-color: transparent;
+            }
             .playerWrapperTextBlock {
               background-color: var(--color-white);
               display: flex;
@@ -381,8 +380,8 @@
       }
     }
     .fifth {
-      max-height: 1271px;
-      height: 66.19vw;
+      max-height: 1351px;
+      height: 70.36vw;
       .fifthContent {
         .fifthCatalogue {
           display: flex;
@@ -429,7 +428,35 @@
       }
     }
     .sixth {
-
+      max-height: 729px;
+      height: 37.96vw;
+      .sixthContent {
+        background-image: url("../images/sixthBack.jpg");
+        background-size: auto;
+        background-position: left center;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        .sixthTextCard {
+          background-color: var(--color-white);
+          max-width: 692px;
+          max-height: 522px;
+          width: 36.04vw;
+          height: 27.18vw;
+          padding: 6.25vw 7.91vw 6.25vw 4.47vw;
+          .sixthTextCard__textBlock {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            flex-direction: column;
+            max-width: 454px;
+            max-height: 282px;
+            width: 23.64vw;
+            height: 14.68vw;
+          }
+        }
+      }
     }
   }
 }
