--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
 @import url("../styles/header.css");
 @import url("../styles/main.css");
+@import url("../styles/footer.css");
 @import url("../styles/visual.css");
