--- a/styles/visual.css
+++ b/styles/visual.css
@@ -25,7 +25,7 @@ body { width: 100%; height: 100%;}
 body.lock {
     overflow-y: hidden;
 }
-header, nav, aside, footer { display: block; overflow: hidden;}
+header, nav, main, footer { display: block; overflow: hidden;}
 button, input, a { cursor: pointer;}
 a { text-decoration: none;}
 ul li { list-style: none;}
@@ -39,6 +39,7 @@ ul li:hover {
     --color-black-opacity: rgba(0, 0, 0, 0.36);
     --color-black-mixin: rgba(16, 16, 16, 1);
     --color-grey: rgba(151, 151, 151, 1);
+    --color-light-grey: rgba(164, 164, 164, 1);
     --color-white: rgba(255, 255, 255, 1);
     --color-white-opacity: rgba(255, 255, 255, 0.7);
 }
@@ -96,6 +97,9 @@ header #menuContent .searchForm input {
     border-bottom-left-radius: 5px;
     padding-left: 20px;
     font-size: 1rem;
+}
+.footerColumn > * {
+    width: 100%;
 }
 .tech_textBlock {
     max-width: 716px;
