images have compressed

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,7 +47,7 @@
     flex: 1 1 auto;
     margin: 0 auto;
     .start {
-      background-image: url("../images/firstbackground.jpg");
+      background-image: url("../images/min/startback_min.jpg");
       background-position: center;
       background-repeat: no-repeat;
       max-width: 100vw;
@@ -169,7 +169,7 @@
       max-height: 606px;
       height: 31.56vw;
       .secondContent {
-        background-image: url("../images/secondbackground.jpg");
+        background-image: url("../images/min/secondback_min.jpg");
         background-position: center right;
         background-repeat: no-repeat;
         display: flex;
@@ -250,7 +250,7 @@
           width: 23.64vw;
           height: 100%;
           .playerWrapper {
-            background-image: url("../images/playerPreview.jpg");
+            background-image: url("../images/min/playerpreview_min.jpg");
             position: relative;
             cursor: pointer;
             width: 100%;
@@ -431,7 +431,7 @@
       max-height: 729px;
       height: 37.96vw;
       .sixthContent {
-        background-image: url("../images/sixthBack.jpg");
+        background-image: url("../images/min/sixthback_min.jpg");
         background-size: auto;
         background-position: left center;
         background-repeat: no-repeat;
@@ -466,7 +466,7 @@
     margin: 0 auto;
     background-color: crimson;
     .start {
-      background-image: url("../images/firstbackground.jpg");
+      background-image: url("../images/startback.jpg");
       background-position: center;
       background-repeat: no-repeat;
       max-width: 100vw;
@@ -485,7 +485,7 @@
     margin: 0 auto;
     background-color: crimson;
     .start {
-      background-image: url("../images/firstbackground.jpg");
+      background-image: url("../images/startback.jpg");
       background-position: left top;
       background-repeat: no-repeat;
       background-size: contain;
