--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -133,3 +133,145 @@
     }
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footerCopyright {
+    font-weight: normal;
+    font-size: 1.56vw;
+  }
+  .footerColumn {
+    min-width: 50%;
+    max-height: 209px;
+    width: 50%;
+    height: 20.43vw;
+    .footerColumn__content {
+      .footerColumn__title {
+        h3 {
+          font-size: 2vw;
+        }
+      }
+    }
+  }
+  .footerColumn:first-of-type,
+  .footerColumn:last-of-type {
+    color: var(--color-white);
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    .footerColumn__content {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+    }
+  }
+  footer {
+    background-color: var(--color-black-mixin);
+    max-height: fit-content;
+    height: fit-content;
+    margin-top: 7.82vw;
+    .footerContent {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 3.64vw 0 2.63vw 0;
+      .footerColumn:first-of-type {
+        max-width: 472px;
+        .footerColumn__content {
+          max-height: 157px;
+          height: 15.34vw;
+          .logo {
+            img {
+              max-width: 162px;
+              max-height: 57px;
+              width: 15.83vw;
+              height: 5.57vw;
+            }
+          }
+          .footerContactList {
+            display: flex;
+            gap: 15px;
+            max-height: 18px;
+            max-width: 74px;
+            width: 7.23vw;
+            height: 1.75vw;
+          }
+        }
+      }
+      .footerColumn:nth-of-type(2),
+      .footerColumn:nth-of-type(3) {
+        .footerColumn__content {
+          display: flex;
+          justify-content: space-between;
+          flex-direction: column;
+          .footerColumn__title {
+            color: var(--color-white);
+            font-weight: normal;
+            font-size: 0.72vw;
+          }
+          .footerColumn__list {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            li {
+              color: var(--color-light-grey);
+              &:hover {
+                color: var(--color-white);
+              }
+            }
+            li.changed {
+              color: var(--color-white);
+            }
+          }
+        }
+      }
+      .footerColumn:nth-of-type(2) {
+        max-width: 282px;
+        .footerColumn__content {
+          max-height: 132px;
+          height: 12.9vw;
+          .footerColumn__list {
+            max-width: 90px;
+            max-height: 96px;
+            width: auto;
+            height: 9.38vw;
+          }
+        }
+      }
+      .footerColumn:nth-of-type(3) {
+        max-width: 336px;
+        margin-top: 40px;
+        .footerColumn__content {
+          max-height: 108px;
+          height: 10.55vw;
+          .footerColumn__list {
+            max-width: 183px;
+            max-height: 72px;
+            width: auto;
+            height: 7.03vw;
+          }
+        }
+      }
+      .footerColumn:last-of-type {
+        max-width: 331px;
+        margin-top: 40px;
+        .footerColumn__content {
+          max-height: 142px;
+          width: auto;
+          height: 13.88vw;
+          p {
+            font-size: 2vw;
+            line-height: 1.6;
+          }
+        }
+        .footerCopyright {
+          text-align: right;
+          p {
+            span {
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+  }
+}
