--- a/styles/header.scss
+++ b/styles/header.scss
@@ -33,11 +33,16 @@
         display: flex;
         align-items: center;
         #searchButton {
+          display: block;
           max-width: 276px;
           width: 19.4vw;
           height: 20px;
           button {
-            background-color: inherit;
+            min-width: 17px;
+            #headerSearch {
+              width: 100%;
+              height: 100%;
+            }
           }
         }
         .navigation {
@@ -72,7 +77,7 @@
           padding: 0 4vw 0 4vw;
           input {
             max-width: 600px;
-            width: 48vw;
+            width: 31.25vw;
             max-height: 40px;
             height: 2.08vw;
             &:hover {
@@ -80,7 +85,7 @@
             }
             &::placeholder {
               color: var(--color-grey);
-              font-size: 1rem;
+              font-size: 1.08vw;
             }
           }
           button {
@@ -91,7 +96,7 @@
             max-height: 40px;
             height: 2.08vw;
             font-weight: 600;
-            font-size: 1rem;
+            font-size: 1.08vw;
             border-top-right-radius: 5px;
             border-bottom-right-radius: 5px;
             &:hover {
