--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .firstTitle, .fourthTitle, .fifthTitle {
     display: flex;
     align-items: center;
@@ -80,11 +80,15 @@
       }
     }
     .first {
+      max-height: 917px;
+      height: fit-content;
       .firstContent {
         .firstSlider {
           width: 100%;
           max-height: 698px;
+          //max-height: 718px;
           height: 36.35vw;
+          //height: 36.35vw;
           padding: 40px 0 40px 0;
           .sliderWrapper {
             gap: 1.38vw;
@@ -251,6 +255,8 @@
           height: 100%;
           .playerWrapper {
             background-image: url("../images/min/playerpreview_min.jpg");
+            background-repeat: no-repeat;
+            background-size: contain;
             position: relative;
             cursor: pointer;
             width: 100%;
@@ -338,7 +344,7 @@
     }
     .fourth {
       max-height: 803px;
-      height: 41.82vw;
+      height: fit-content;
       .fourthContent {
         .fourthSlider {
           max-height: 502px;
@@ -381,19 +387,21 @@
     }
     .fifth {
       max-height: 1351px;
-      height: 70.36vw;
+      height: fit-content;
       .fifthContent {
         .fifthCatalogue {
           display: flex;
           justify-content: space-between;
           flex-wrap: wrap;
-          padding: 2.08vw 0 2.6vw 0;
-          max-height: 1050px;
-          height: 54.68vw;
+          max-height: 1060px;
+          height: 55.2vw;
           .fifthCatalogueCard {
             display: flex;
-            justify-content: space-between;
             flex-direction: column;
+            max-width: 333px;
+            max-height: 530px;
+            width: 17.34vw;
+            height: 27.6vw;
             .fifthCatalogueImage {
               img {
                 max-height: 100%;
@@ -410,9 +418,9 @@
               justify-content: center;
               flex-direction: column;
               cursor: pointer;
-              gap: 18px;
-              max-height: 112px;
-              height: 5.83vw;
+              gap: 16px;
+              max-height: 238px;
+              height: 12.39vw;
               h3 {
                 font-size: 1.35vw;
               }
@@ -460,41 +468,399 @@
     }
   }
 }
-@media screen and (max-width: 1439px) and (min-width: 1024px) {
-  main {
-    flex: 1 1 auto;
-    margin: 0 auto;
-    background-color: crimson;
-    .start {
-      background-image: url("../images/startback.jpg");
-      background-position: center;
-      background-repeat: no-repeat;
-      max-width: 100vw;
-      max-height: 526px;
-      margin: 0 auto;
-      .start__content {
-        height: 100%;
-
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .firstTitle, .fourthTitle, .fifthTitle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+    max-height: 159px;
+    height: 14.53vw;
+    h2 {
+      position: relative;
+      max-height: 73px;
+      height: 7.13vw;
+      &::after {
+        content: "";
+        background-color: var(--color-grey);
+        position: absolute;
+        max-width: 150px;
+        max-height: 5px;
+        width: 17.66vw;
+        height: 0.48vw;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 5px;
       }
     }
   }
-}
-@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .fourthButton, .fifthButton {
+    display: flex;
+    justify-content: center;
+  }
+  [class*="__textBlock"]{
+    h1 {
+      font-weight: 700;
+      font-size: 2.5vw;
+    }
+    p {
+      line-height: 1.5;
+      font-weight: 100;
+      font-size: 1.1vw;
+    }
+  }
   main {
+    display: flex;
+    flex-direction: column;
     flex: 1 1 auto;
     margin: 0 auto;
-    background-color: crimson;
     .start {
-      background-image: url("../images/startback.jpg");
-      background-position: left top;
+      background-image: url("../images/min/startback_min.jpg");
       background-repeat: no-repeat;
-      background-size: contain;
+      background-size: cover;
+      background-position: 15% center;
       max-width: 100vw;
-      max-height: 51.4vw;
+      max-height: 954px;
+      width: 100%;
       margin: 0 auto;
-      .start__content {
-        height: 100%;
+      .startContent {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        .startTextCard {
+          background-color: var(--color-black-opacity);
+          backdrop-filter: blur(10px);
+          transform: translateX(1.04vw);
+          z-index: auto;
+          width: 69.99vw;
+          height: 39.29vw;
+          padding: 4.88vw 3.51vw 5.08vw 4.2vw;
+          .startTextCard__textBlock {
+            color: var(--color-white);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            max-width: 637px;
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+    }
+    .first {
+      max-height: 917px;
+      height: fit-content;
+      .firstContent {
+        .firstSlider {
+          width: 100%;
+          max-height: 718px;
+          height: 70.18vw;
+          padding: 40px 0 40px 0;
+          .sliderWrapper {
+            .firstSliderCard {
+              max-height: 638px;
+              width: 100%;
+              height: 62.36vw;
+              min-width: 0;
+              .firstGalleryImage {
+                position: relative;
+                img {
+                  max-width: 100%;
+                  max-height: 100%;
+                }
+                .galleryTextBlock {
+                  background-color: var(--color-black-mixin);
+                  color: var(--color-white);
+                  border: 1px var(--color-white) solid;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  flex-direction: column;
+                  text-align: center;
+                  position: absolute;
+                  max-height: 114px;
+                  height: 11.14vw;
+                  bottom: -20px;
+                  left: 50%;
+                  transform: translateX(-50%);
+                  h3 {
+                    font-weight: normal;
+                    font-size: 2.73vw;
+                  }
+                  p {
+                    font-weight: 100;
+                    font-size: 1.56vw;
+                    margin-top: 0.52vw;
+                  }
+                }
+              }
 
+            }
+            #firstNthCard {
+              display: flex;
+              justify-content: center;
+              .firstGalleryImage {
+                .galleryTextBlock {
+                  max-width: 535px;
+                  width: 52.29vw;
+                }
+              }
+            }
+            #secondNthCard {
+              display: flex;
+              justify-content: center;
+              .firstGalleryImage {
+                .galleryTextBlock {
+                  max-width: 299px;
+                  width: 29.22vw;
+                }
+              }
+            }
+            #thirdNthCard {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              flex-direction: column;
+              .firstGalleryImage {
+                width: 44.37vw;
+                .galleryTextBlock {
+                  max-width: 415px;
+                  width: 40.56vw;
+                }
+              }
+            }
+          }
+          .swiper-button-prev, .swiper-button-next {
+            background-color: var(--color-white);
+            color: var(--color-black);
+            width: 50px;
+            height: 60px;
+            border-radius: 3px;
+            &:focus {
+              background-color: var(--color-black-mixin);
+              color: var(--color-white);
+            }
+          }
+        }
+      }
+    }
+    .second {
+      max-height: 606px;
+      height: 59.23vw;
+      .secondContent {
+        background-image: url("../images/min/secondback_min.jpg");
+        background-position: center center;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        .secondTextCard {
+          background-color: var(--color-white);
+          max-width: 708px;
+          max-height: 402px;
+          width: 69.2vw;
+          height: 39.29vw;
+          padding: 4.88vw 5.37vw 5.08vw 4.2vw;
+          .secondTextCard__textBlock {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            max-width: 610px;
+            max-height: 300px;
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+    }
+    .third {
+      max-height: 806px;
+      height: 78.78vw;
+      .thirdContent {
+        display: flex;
+        .thirdContent__content {
+          display: flex;
+          align-items: flex-start;
+          justify-content: space-between;
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+          .thirdTextBlock, .thirdSlider, .thirdButton {
+            width: 100%;
+          }
+          .thirdContent__textBlock {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            text-align: left;
+            flex-direction: column;
+            max-height: 259px;
+            height: 25.31vw;
+            h1 {
+
+            }
+            p {
+
+            }
+          }
+          .thirdSlider {
+            max-height: 325px;
+            max-width: 903px;
+            width: 100%;
+            height: 31.76vw;
+            margin: 0;
+            .thirdSliderWrapper {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              height: 100%;
+              min-width: 0;
+              .thirdSliderSlide {
+                max-width: 257px;
+                width: 13.38vw;
+                height: 100%;
+                img {
+                  max-height: 100%;
+                }
+              }
+            }
+          }
+          .thirdButton {
+            max-height: 52px;
+          }
+        }
+        .thirdContent__video {
+          display: none;
+        }
+      }
+    }
+    .fourth {
+      max-height: 803px;
+      height: fit-content;
+      .fourthContent {
+        .fourthSlider {
+          max-height: 502px;
+          height: 49.07vw;
+          width: 100%;
+          padding: 40px 0 40px;
+          .fourthSliderWrapper {
+            //display: flex;
+            //justify-content: space-between;
+            .fourthSlide {
+              max-width: 333px;
+              max-height: 422px;
+              width: 32.55vw;
+              height: 41.25vw;
+              .fourthSlideImage {
+                img {
+                  max-height: 100%;
+                  max-width: 100%;
+                }
+              }
+              .fourthSlideTextBlock {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                text-align: center;
+                gap: 3px;
+                max-height: 91px;
+                height: 4.73vw;
+                h3 {
+                  font-size: 2vw;
+                  margin-top: 20px;
+                }
+                p {
+                  font-size: 2vw;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .fifth {
+      max-height: fit-content;
+      height: fit-content;
+      .fifthContent {
+        .fifthCatalogue {
+          display: flex;
+          justify-content: center;
+          flex-wrap: wrap;
+          gap: 20px;
+          max-height: fit-content;
+          height: fit-content;
+          .fifthCatalogueCard {
+            display: flex;
+            flex-direction: column;
+            max-width: 333px;
+            max-height: 530px;
+            width: 32.55vw;
+            height: 51.8vw;
+            .fifthCatalogueImage {
+              img {
+                max-height: 100%;
+                max-width: 100%;
+                cursor: pointer;
+              }
+            }
+            &:hover {
+              transform: scale(1.05) translateY(10px);
+            }
+            .fifthCatalogueTextBlock {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-direction: column;
+              cursor: pointer;
+              gap: 16px;
+              max-height: 238px;
+              height: 12.39vw;
+              h3 {
+                font-size: 2vw;
+              }
+              p {
+                text-align: right;
+                max-width: 161px;
+                width: 15.73vw;
+                font-size: 2vw;
+              }
+            }
+          }
+        }
+      }
+    }
+    .sixth {
+      max-height: 729px;
+      height: 71.26vw;
+      .sixthContent {
+        background-image: url("../images/min/sixthback_min.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: left center;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        .sixthTextCard {
+          background-color: var(--color-white);
+          max-width: 692px;
+          max-height: 522px;
+          width: 67.64vw;
+          height: 51.02vw;
+          padding: 11.73vw 14.85vw 11.73vw 8.4vw;
+          .sixthTextCard__textBlock {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            flex-direction: column;
+            max-width: 454px;
+            max-height: 282px;
+            width: 44.37vw;
+            height: 27.56vw;
+          }
+        }
       }
     }
   }
